logo fixed in light and dark mode in header

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,35 +42,6 @@
   font-size: 18px;
 }
 
-.circle {
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 48px;
-  font-weight: bold;
-  border-radius: 50%;
-  position: relative;
-  background: linear-gradient(to bottom, orange, darkblue);
-}
-
-.circle::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: linear-gradient(to bottom, orange, darkblue);
-  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
-  mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
-  padding: 10px; /* Adjust thickness of the hollow circle */
-}
-
 @layer base {
   :root {
     --background: 39 65% 95%; /* Replaced 0 0% 100% with the HSL equivalent of #F9F4EC */
